@@ -24,7 +24,7 @@
 package org.asyncflows.io.net.samples;
 
 import org.asyncflows.core.Promise;
-import org.asyncflows.core.util.FailFast;
+import org.asyncflows.core.util.Cancellation;
 import org.asyncflows.core.util.SimpleQueue;
 import org.asyncflows.io.AInput;
 import org.asyncflows.io.AOutput;
@@ -34,9 +34,9 @@ import java.nio.ByteBuffer;
 import static org.asyncflows.core.CoreFlows.aFalse;
 import static org.asyncflows.core.CoreFlows.aTrue;
 import static org.asyncflows.core.CoreFlows.aValue;
+import static org.asyncflows.core.util.Cancellation.cancellation;
 import static org.asyncflows.core.util.CoreFlowsAll.aAll;
 import static org.asyncflows.core.util.CoreFlowsSeq.aSeqWhile;
-import static org.asyncflows.core.util.FailFast.failFast;
 import static org.asyncflows.io.IOUtil.isEof;
 
 public class IOSample {
@@ -77,15 +77,15 @@ public class IOSample {
     public static Promise<Long> copy(final AInput<ByteBuffer> input, final AOutput<ByteBuffer> output, int bufferSize, int buffers) {
         final SimpleQueue<ByteBuffer> readQueue = new SimpleQueue<>();
         final SimpleQueue<ByteBuffer> writeQueue = new SimpleQueue<>();
-        final FailFast failFast = failFast();
+        final Cancellation cancellation = cancellation();
         for (int i = 0; i < buffers; i++) {
             readQueue.put(ByteBuffer.allocate(bufferSize));
         }
         final long[] result = new long[1];
         return aAll(
                 () -> aSeqWhile(
-                        () -> failFast.run(readQueue::take).flatMap(
-                                b -> failFast.run(() -> input.read(b)).flatMap(c -> {
+                        () -> cancellation.run(readQueue::take).flatMap(
+                                b -> cancellation.run(() -> input.read(b)).flatMap(c -> {
                                     if (isEof(c)) {
                                         writeQueue.put(null);
                                         return aFalse();
@@ -98,12 +98,12 @@ public class IOSample {
                 )
         ).and(
                 () -> aSeqWhile(
-                        () -> failFast.run(writeQueue::take).flatMap(b -> {
+                        () -> cancellation.run(writeQueue::take).flatMap(b -> {
                             if (b == null) {
                                 return aFalse();
                             } else {
                                 b.flip();
-                                return failFast.run(() -> output.write(b)).thenGet(() -> {
+                                return cancellation.run(() -> output.write(b)).thenGet(() -> {
                                     b.compact();
                                     readQueue.put(b);
                                     return true;
