@@ -7,6 +7,7 @@
 * Added PromiseTraceProvider that allows enriching exceptions with asynchronous stack traces
 * Some small renames, and bug fixes
 * Promise and BatchedVat now used wait-free structures based on AtomicReference
+* FailFast is renamed to Cancellation
 * TODO Changed to sonar for verification (default rule set)
 
 == 0.1.0
